--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>RSA QR Tool</title>
+  <title>RSA QR Tool with Camera Scan</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
@@ -16,22 +16,22 @@
     <div class="grid grid-cols-2 gap-4 mb-4">
       <div>
         <label class="text-sm">p (prime):</label>
-        <input type="number" id="p" class="w-full border px-2 py-1 rounded">
+        <input type="number" id="p" class="w-full border px-2 py-1 rounded" />
       </div>
       <div>
         <label class="text-sm">q (prime):</label>
-        <input type="number" id="q" class="w-full border px-2 py-1 rounded">
+        <input type="number" id="q" class="w-full border px-2 py-1 rounded" />
       </div>
       <div class="col-span-2">
         <label class="text-sm">e (public exponent):</label>
-        <input type="number" id="e" class="w-full border px-2 py-1 rounded">
+        <input type="number" id="e" class="w-full border px-2 py-1 rounded" />
       </div>
     </div>
 
     <!-- Plaintext -->
     <div class="mb-4">
       <label class="text-sm">Plaintext (ID Surat):</label>
-      <input type="text" id="plaintext" class="w-full border px-2 py-1 rounded">
+      <input type="text" id="plaintext" class="w-full border px-2 py-1 rounded" />
     </div>
 
     <!-- Encrypt -->
@@ -42,56 +42,87 @@
     <div class="grid grid-cols-2 gap-4 mb-4">
       <div>
         <label class="text-sm">n:</label>
-        <input type="text" id="n" class="w-full border px-2 py-1 rounded bg-gray-100" readonly>
+        <input type="text" id="n" class="w-full border px-2 py-1 rounded bg-gray-100" readonly />
       </div>
       <div>
         <label class="text-sm">d:</label>
-        <input type="text" id="d" class="w-full border px-2 py-1 rounded bg-gray-100" readonly>
+        <input type="text" id="d" class="w-full border px-2 py-1 rounded bg-gray-100" readonly />
       </div>
     </div>
 
     <!-- QR Code -->
     <div class="text-center mb-6">
       <canvas id="qrcode-canvas" class="mx-auto"></canvas>
-      <button onclick="downloadQR()" class="mt-2 bg-purple-600 text-white px-4 py-2 rounded">⬇️ Simpan QR Code</button>
+      <button onclick="downloadQR()" class="mt-2 bg-purple-600 text-white px-4 py-2 rounded">
+        ⬇️ Simpan QR Code
+      </button>
     </div>
 
-    <hr class="my-6">
+    <hr class="my-6" />
 
     <!-- QR Upload -->
     <div class="mb-4">
       <label class="text-sm font-semibold">📷 Upload QR Code Image to Decrypt:</label>
-      <input type="file" id="qrUpload" accept="image/*" onchange="scanQR(event)" class="block mt-2">
+      <input
+        type="file"
+        id="qrUpload"
+        accept="image/*"
+        onchange="scanQR(event)"
+        class="block mt-2"
+      />
     </div>
 
-    <!-- Scan QR from Camera -->
-    <div class="mb-6">
-      <label class="text-sm font-semibold">📷 Scan QR Code dari Kamera:</label>
-      <div class="flex items-center gap-2 mt-2">
-        <button onclick="startCameraScan()" class="bg-blue-600 text-white px-4 py-2 rounded">▶️ Mulai Scan Kamera</button>
-        <button onclick="stopCameraScan()" class="bg-gray-600 text-white px-4 py-2 rounded">⏹️ Stop Scan</button>
-      </div>
-      <video id="video" class="mt-2 border rounded w-full max-w-md" style="display:none;" autoplay muted></video>
+    <!-- OR scan from camera -->
+    <div class="mb-4">
+      <button onclick="startCameraScan()" class="bg-blue-600 text-white px-4 py-2 rounded w-full mb-2">
+        📷 Scan QR Code dari Kamera
+      </button>
+      <video
+        id="video"
+        style="width: 100%; max-width: 400px; border: 1px solid #ccc; display: none;"
+      ></video>
+      <button
+        onclick="stopCameraScan()"
+        id="stopScanBtn"
+        class="bg-red-600 text-white px-4 py-2 rounded w-full mt-2"
+        style="display:none;"
+      >
+        ✋ Stop Scan
+      </button>
     </div>
 
     <!-- Ciphertext (from QR) -->
     <div class="mb-4">
       <label class="text-sm">Ciphertext (dari QR):</label>
-      <textarea id="ciphertextInput" rows="4" class="w-full border px-2 py-1 rounded"></textarea>
+      <textarea
+        id="ciphertextInput"
+        rows="4"
+        class="w-full border px-2 py-1 rounded"
+      ></textarea>
     </div>
 
     <!-- Decrypt -->
-    <button onclick="decrypt()" class="bg-red-600 text-white px-4 py-2 rounded w-full mb-4">🔓 Decrypt</button>
+    <button
+      onclick="decrypt()"
+      class="bg-red-600 text-white px-4 py-2 rounded w-full mb-4"
+    >
+      🔓 Decrypt
+    </button>
 
     <!-- Output -->
     <div>
       <label class="text-sm">Plaintext Hasil Dekripsi:</label>
-      <textarea id="decryptedText" rows="2" class="w-full border px-2 py-1 rounded bg-gray-100" readonly></textarea>
+      <textarea
+        id="decryptedText"
+        rows="2"
+        class="w-full border px-2 py-1 rounded bg-gray-100"
+        readonly
+      ></textarea>
     </div>
   </div>
 
   <script>
-    // === RSA Key & Math Functions ===
+    // Helper functions
     function gcd(a, b) {
       while (b !== 0) [a, b] = [b, a % b];
       return a;
@@ -124,7 +155,7 @@
       document.getElementById("d").value = d;
     }
 
-    // === Encrypt & Generate QR ===
+    // Encrypt text => ciphertext string (space separated)
     function encrypt() {
       try {
         calculateKeys();
@@ -132,26 +163,30 @@
         const e = parseInt(document.getElementById("e").value);
         const n = parseInt(document.getElementById("n").value);
 
-        const ciphertext = Array.from(plaintext).map(ch => {
-          const m = BigInt(ch.charCodeAt(0));
-          const c = m ** BigInt(e) % BigInt(n);
-          return c.toString();
-        }).join(" ");
+        const ciphertext = Array.from(plaintext)
+          .map((ch) => {
+            const m = BigInt(ch.charCodeAt(0));
+            const c = (m ** BigInt(e)) % BigInt(n);
+            return c.toString();
+          })
+          .join(" ");
 
         // Generate QR code
-        QRCode.toCanvas(document.getElementById("qrcode-canvas"), ciphertext, function (error) {
-          if (error) console.error(error);
-        });
+        QRCode.toCanvas(
+          document.getElementById("qrcode-canvas"),
+          ciphertext,
+          function (error) {
+            if (error) console.error(error);
+          }
+        );
 
-        // Clear ciphertext input (so user can scan from QR or upload)
+        // Clear ciphertext input textarea (will be set by scan)
         document.getElementById("ciphertextInput").value = "";
-        document.getElementById("decryptedText").value = "";
       } catch (err) {
         alert(err);
       }
     }
 
-    // === Download QR Image ===
     function downloadQR() {
       const canvas = document.getElementById("qrcode-canvas");
       const link = document.createElement("a");
@@ -160,7 +195,7 @@
       link.click();
     }
 
-    // === Scan QR from Uploaded Image ===
+    // Scan QR from uploaded image file
     function scanQR(event) {
       const file = event.target.files[0];
       const reader = new FileReader();
@@ -186,7 +221,8 @@
       reader.readAsDataURL(file);
     }
 
-    // === Real-time Scan QR from Camera ===
+    // --- Kamera scan ---
+
     let videoStream = null;
     let scanning = false;
 
@@ -194,66 +230,75 @@
       const video = document.getElementById("video");
       if (scanning) return;
 
-      navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } })
-        .then(stream => {
+      navigator.mediaDevices
+        .getUserMedia({ video: { facingMode: "environment" } })
+        .then((stream) => {
           videoStream = stream;
           video.srcObject = stream;
           video.style.display = "block";
-          scanning = true;
-          scanVideoFrame();
+
+          document.getElementById("stopScanBtn").style.display = "block";
+
+          video.onloadedmetadata = () => {
+            video.play();
+            scanning = true;
+            scanVideoFrame();
+          };
         })
-        .catch(err => {
+        .catch((err) => {
           alert("Gagal akses kamera: " + err);
         });
-    }
-
-    function stopCameraScan() {
-      const video = document.getElementById("video");
-      if (videoStream) {
-        videoStream.getTracks().forEach(track => track.stop());
-        videoStream = null;
-      }
-      scanning = false;
-      video.style.display = "none";
     }
 
     function scanVideoFrame() {
       if (!scanning) return;
 
       const video = document.getElementById("video");
-      const canvas = document.createElement("canvas");
-      canvas.width = video.videoWidth;
-      canvas.height = video.videoHeight;
-      const ctx = canvas.getContext("2d");
-      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-      const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+      if (video.readyState === video.HAVE_ENOUGH_DATA) {
+        const canvas = document.createElement("canvas");
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
+        const ctx = canvas.getContext("2d");
+        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-      const code = jsQR(imageData.data, canvas.width, canvas.height);
-      if (code) {
-        document.getElementById("ciphertextInput").value = code.data;
-        alert("QR Code berhasil discan dari kamera!");
-        stopCameraScan();
-      } else {
-        requestAnimationFrame(scanVideoFrame);
+        const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+        const code = jsQR(imageData.data, canvas.width, canvas.height);
+
+        if (code) {
+          document.getElementById("ciphertextInput").value = code.data;
+          alert("QR Code berhasil discan dari kamera!");
+          stopCameraScan();
+          return;
+        }
       }
+      requestAnimationFrame(scanVideoFrame);
     }
 
-    // === Decrypt ===
+    function stopCameraScan() {
+      scanning = false;
+      const video = document.getElementById("video");
+      if (videoStream) {
+        videoStream.getTracks().forEach((track) => track.stop());
+      }
+      video.srcObject = null;
+      video.style.display = "none";
+      document.getElementById("stopScanBtn").style.display = "none";
+    }
+
+    // Decrypt ciphertext (space separated) using d,n
     function decrypt() {
-      const ciphertextRaw = document.getElementById("ciphertextInput").value.trim();
-      if (ciphertextRaw.length === 0) return alert("Masukkan ciphertext dari QR terlebih dahulu.");
-
-      const ciphertext = ciphertextRaw.split(" ");
-      const dVal = document.getElementById("d").value;
-      const nVal = document.getElementById("n").value;
-      if (!dVal || !nVal) return alert("Kunci privat belum dihitung (isi p, q, e lalu encrypt).");
-
-      const d = BigInt(dVal);
-      const n = BigInt(nVal);
+      const ciphertext = document
+        .getElementById("ciphertextInput")
+        .value.trim()
+        .split(" ");
+      const d = BigInt(document.getElementById("d").value);
+      const n = BigInt(document.getElementById("n").value);
+      if (!d || !n || ciphertext.length === 0)
+        return alert("Isi kunci dan ciphertext terlebih dahulu");
 
       try {
-        const chars = ciphertext.map(c => {
-          const m = BigInt(c) ** d % n;
+        const chars = ciphertext.map((c) => {
+          const m = (BigInt(c) ** d) % n;
           return String.fromCharCode(Number(m));
         });
         document.getElementById("decryptedText").value = chars.join("");
