--- a/index.html
+++ b/index.html
@@ -128,9 +128,7 @@
   <script>
     // Hardcoded username-password list
     const validUsers = {
-      "admin": "admin123",
-      "user1": "pass1",
-      "user2": "pass2",
+      "kripto": "kripto123",
     };
 
     function login() {
