--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- Login Section -->
   <div id="loginSection" class="max-w-md mx-auto bg-white rounded-xl shadow-md p-6">
-    <h2 class="text-2xl font-bold mb-6 text-center">🔐 Login Required</h2>
+    <h2 class="text-2xl font-bold mb-6 text-center">🔐 Login </h2>
     <label class="block mb-2 font-semibold">Username:</label>
     <input type="text" id="username" class="w-full border px-2 py-1 rounded mb-4" />
     <label class="block mb-2 font-semibold">Password:</label>
